--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 <body>
   <div class="wrap">
     <div class="logo3d" id="logo3d"></div>
-    <div class="hint">arraste com o mouse ou com o dedo para girar</div>
+    <div class="hint"></div>
 
     <p class="cta-text">
-      O acesso ao inesperado começa aqui. Entra pra lista e receba o convite pro próximo drop
+      Entra pra lista e receba o convite pro próximo drop
     </p>
     <button class="cta-btn" id="ctaJoin">entrar na lista</button>
   </div>
@@ -79,7 +79,7 @@
 
     /* ===================== CONFIG EDITÁVEL ===================== */
     const CONFIG = {
-      modelUrl: './logo3dpreta.gltf',               // seu .gltf
+      modelUrl: './logo3d.gltf',               // seu .gltf
       resourcePath: './',                      // onde estão .bin e /textures (mesmo nível do .gltf)
       initialScale: 0.9,                       // tamanho da logo
       rotateOnIdle: true,                      // gira de leve quando parado
