--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 <body>
   <div class="wrap">
     <div class="logo3d" id="logo3d"></div>
-    <div class="hint"></div>
+    <div class="hint">arraste com o mouse ou com o dedo para girar</div>
 
     <p class="cta-text">
-      Entra pra lista e receba o convite pro próximo drop
+      O acesso ao inesperado começa aqui. Entra pra lista e receba o convite pro próximo drop
     </p>
     <button class="cta-btn" id="ctaJoin">entrar na lista</button>
   </div>
