--- a/index.html
+++ b/index.html
@@ -10,20 +10,17 @@
     *{ box-sizing:border-box; margin:0; padding:0 }
     html,body{ height:100%; font-family:'Outfit',system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif; color:var(--fg); overflow-x:hidden; }
 
-    /* ===== Fundo direto no body (desktop) ===== */
+    /* Fundo direto no body */
     body{
-      /* Se o arquivo se chama backgroundmobile.png, troque abaixo */
       background: #ffffff url('./backgroundpc.png') center/cover no-repeat fixed;
     }
-    /* ===== Troca o fundo no mobile ===== */
     @media (max-width:768px){
       body{
-        background-image: url('./backgroundmoblie.png'); /* mantenha o nome exato do arquivo */
-        background-attachment: scroll; /* mobile costuma ignorar fixed */
+        background-image: url('./backgroundmoblie.png'); /* cuidado com o nome do arquivo */
+        background-attachment: scroll;
       }
     }
 
-    /* Conteúdo principal (fica naturalmente acima do background do body) */
     .wrap{
       min-height:100vh;
       display:flex;
@@ -34,7 +31,6 @@
       text-align:center;
       padding:24px 16px 40px;
     }
-
     .logo3d{
       width:min(92vw, 820px);
       height:42vh;
@@ -43,7 +39,6 @@
       align-items:center;
       justify-content:center;
     }
-
     .hint{ font-size:12px; opacity:.6; margin-top:4px }
     .cta-text{ max-width:62ch; font-size:clamp(14px,2.2vw,18px); line-height:1.5; opacity:.9 }
     .cta-btn{
@@ -58,32 +53,30 @@
 <body>
   <div class="wrap">
     <div class="logo3d" id="logo3d"></div>
-    <div class="hint">arraste com o mouse ou com o dedo para girar</div>
+    <div class="hint"></div>
 
     <p class="cta-text">
-      O acesso ao inesperado começa aqui. Entra pra lista e receba o convite pro próximo drop
+      Entra pra lista e receba o convite pro próximo drop
     </p>
     <button class="cta-btn" id="ctaJoin">entrar na lista</button>
   </div>
 
   <script type="module">
-    // Imports via URL (funciona em qualquer host)
+    // Three.js ESM direto via URL
     import * as THREE from 'https://unpkg.com/three@0.160.0/build/three.module.js';
     import { GLTFLoader } from 'https://unpkg.com/three@0.160.0/examples/jsm/loaders/GLTFLoader.js';
 
-    // ===== CONFIG EDITÁVEL =====
+    // === CONFIG — troque o nome do seu arquivo aqui:
     const CONFIG = {
-      modelUrl: './logo3d.gltf',   // seu .gltf
-      resourcePath: './',          // onde estão .bin e /textures (mesmo nível do .gltf)
-      initialScale: 0.9,           // tamanho da logo
-      rotateOnIdle: true,          // gira de leve quando parado
+      modelUrl: './logo3d.gltf',   // <<< seu .gltf embedded
+      initialScale: 0.9,
+      rotateOnIdle: true,
       ctaUrl: 'https://wa.me/55SEUNUMERO?text=Quero%20entrar%20na%20lista%20VIP%20da%20CARVA'
     };
 
-    // ===== Cena =====
+    // Cena
     const wrap = document.getElementById('logo3d');
-    const scene = new THREE.Scene();
-    scene.background = null;             // transparente (mostra o background do body)
+    const scene = new THREE.Scene(); scene.background = null;
     const camera = new THREE.PerspectiveCamera(45, 1, 0.1, 100);
     camera.position.set(0, 0.2, 3.2);
 
@@ -91,14 +84,13 @@
     renderer.setPixelRatio(Math.min(window.devicePixelRatio, 2));
     wrap.appendChild(renderer.domElement);
 
-    const key = new THREE.DirectionalLight(0xffffff, 2.2); key.position.set(2, 3, 4);
+    const key = new THREE.DirectionalLight(0xffffff, 2.2); key.position.set(2,3,4);
     const fill = new THREE.AmbientLight(0xffffff, .35);
     scene.add(key, fill);
 
-    const group = new THREE.Group();
-    scene.add(group);
+    const group = new THREE.Group(); scene.add(group);
 
-    // ===== Overlay de diagnóstico
+    // Overlay de diagnóstico
     function showOverlay(msg){
       let el = document.getElementById('debugMsg');
       if(!el){
@@ -111,44 +103,41 @@
       el.style.display = msg ? 'block' : 'none';
     }
 
-    // ===== Fallback imediato (cubo) — pra garantir que algo apareça
-    const fbGeo = new THREE.BoxGeometry(1,1,1);
-    const fbMat  = new THREE.MeshStandardMaterial({ color:0x111111, metalness:.2, roughness:.5 });
-    const fbCube = new THREE.Mesh(fbGeo, fbMat);
-    group.add(fbCube);
+    // Fallback: cubo (aparece até a logo carregar com sucesso)
+    const fb = new THREE.Mesh(
+      new THREE.BoxGeometry(1,1,1),
+      new THREE.MeshStandardMaterial({ color:0x111111, metalness:.2, roughness:.5 })
+    );
+    group.add(fb);
 
-    // ===== Loader GLTF
+    // Loader GLTF — sem resourcePath (para .gltf embedded funcionar)
     const loader = new GLTFLoader();
-    loader.setResourcePath(CONFIG.resourcePath || './'); // procura .bin e /textures aqui
-
     console.log('[GLTF] carregando', CONFIG.modelUrl);
     loader.load(
       CONFIG.modelUrl,
       (gltf)=>{
         // remove fallback
-        try{
-          group.remove(fbCube);
-          fbCube.geometry.dispose();
-          fbCube.material.dispose();
-        }catch{}
+        try{ group.remove(fb); fb.geometry.dispose(); fb.material.dispose(); }catch{}
 
         const model = gltf.scene;
-        // normaliza escala
+
+        // Verificações úteis para “gltf nu e cru”
+        // 1) embedded? normalmente o .gltf contém "data:application/octet-stream;base64"
+        // 2) se o modelo vier sem meshes, o tamanho será ~0
         const box = new THREE.Box3().setFromObject(model);
-        const size = box.getSize(new THREE.Vector3()).length();
-        const scale = (CONFIG.initialScale * 1.6) / (size || 1);
+        const size = box.getSize(new THREE.Vector3());
+        const diag = Math.sqrt(size.x*size.x + size.y*size.y + size.z*size.z);
+        if (!diag || diag === 0) {
+          showOverlay('⚠️ O .gltf foi carregado, mas parece não conter geometria (meshes). Verifique o export.');
+        }
+
+        const scale = (CONFIG.initialScale * 1.6) / (diag || 1);
         model.scale.setScalar(scale);
         model.rotation.set(0, Math.PI*0.1, 0);
 
-        model.traverse(o=>{
-          if(o.isMesh && o.material && 'envMapIntensity' in o.material){
-            o.material.envMapIntensity = 1.0;
-          }
-        });
-
         group.add(model);
         showOverlay('');
-        console.log('[GLTF] OK');
+        console.log('[GLTF] OK (embedded)');
       },
       (xhr)=>{
         const pct = xhr.total ? Math.round((xhr.loaded/xhr.total)*100) : null;
@@ -156,12 +145,12 @@
       },
       (err)=>{
         console.error('[GLTF] erro', err);
-        showOverlay('⚠️ Não consegui carregar a logo 3D (.gltf).<br>Veja em Network se faltam <b>logo3d.bin</b> e/ou <b>textures/…</b>.');
+        showOverlay('⚠️ Falha ao carregar o .gltf.<br>Se ele NÃO for “embedded”, vai precisar dos arquivos externos (.bin/texturas).');
         // mantém o cubo pra cena não ficar vazia
       }
     );
 
-    // ===== Responsivo
+    // Responsivo
     function resize(){
       const w = wrap.clientWidth, h = wrap.clientHeight;
       renderer.setSize(w, h, false);
@@ -170,7 +159,7 @@
     resize();
     addEventListener('resize', resize);
 
-    // ===== Arraste com inércia
+    // Arraste com inércia
     let isDown=false, lastX=0,lastY=0, vx=0, vy=0;
     const onDown=(x,y)=>{ isDown=true; lastX=x; lastY=y; };
     const onMove=(x,y)=>{
@@ -191,7 +180,7 @@
     renderer.domElement.addEventListener('touchmove',  e=>{ const t=e.touches[0]; if(t) onMove(t.clientX,t.clientY); }, {passive:true});
     renderer.domElement.addEventListener('touchend', onUp);
 
-    // ===== Loop
+    // Loop
     const clock = new THREE.Clock();
     function tick(){
       const dt = Math.min(clock.getDelta(), 0.032);
@@ -205,7 +194,7 @@
     }
     tick();
 
-    // ===== Botão
+    // Botão
     document.getElementById('ctaJoin').addEventListener('click', ()=>{
       window.open(CONFIG.ctaUrl, '_blank');
     });
